--- a/src/components/Polaroid.css
+++ b/src/components/Polaroid.css
@@ -1,26 +1,32 @@
 .polaroid {
-    background-color: #fdf9ef;
+  /*background-color: #fdf9ef;*/
+  background-color: black;
+
 }
 
 @media (max-width: 480px) {
-    .polaroid {
-      display: flex;
-      flex-direction: column;
-      border-width: 5px;
-      padding: 20px;
-      justify-items: center;
-      align-items: center;
-      max-width: 60%;
-    }
-
-    .picture-container {
-      display: flex;
-      align-self: center;
-      max-width: 100%;
-      border-width: 8px;
-    }
-
-    .picture {
-        width: 100%;
-    }
+  .polaroid {
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    justify-items: center;
+    align-items: center;
+    max-width: 60%;
   }
+
+  .picture-container {
+    display: flex;
+    align-self: center;
+    max-width: 100%;
+  }
+
+  .picture {
+    width: 100%;
+  }
+
+  .caption {
+    color: white;
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+}
