--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ a {
 
 .App {
   font-family: 'Reem Kufi', sans-serif;
-  background-color: #FAFAFA;
+  background-color: #CCCCCC;
   display: flex;
   flex-direction: column;
   align-items: center;
