--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -1,5 +1,32 @@
 
 .paper-container {
-  width: 90%;
+  width: 100%;
+  box-sizing: border-box;
+  height: 100%;
+  padding: 16px;
+}
+
+.paper {
+  padding: 24px;
+  box-sizing: border-box;
   background-color: #FAFAFA;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  /* Paper box shador */
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+              0 1px 5px 0 rgba(0,0,0,0.12),
+              0 3px 1px -2px rgba(0,0,0,0.2);
+}
+
+.title {
+  margin-bottom: 8px;
+}
+
+.first-paragraph {
+  margin-bottom: 8px;
+}
+
+.second-paragraph {
+  margin-bottom: 8px;
 }
