--- a/src/components/Polaroid/Polaroid.css
+++ b/src/components/Polaroid/Polaroid.css
@@ -6,10 +6,11 @@
   .polaroid {
     display: flex;
     flex-direction: column;
-    padding: 16px;
+    padding: 12px;
+    padding-bottom: 0px;
     justify-items: center;
     align-items: center;
-    max-width: 60%;
+    max-width: 35%;
   }
 
   .picture-container {
@@ -20,11 +21,12 @@
 
   .picture {
     width: 100%;
+    height: 100%;
   }
 
   .caption {
     color: black;
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin-top: 8px;
+    margin-bottom: 8px;
   }
 }
