--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,6 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
   min-width: 100vw;
 }
