--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -13,14 +13,15 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  /* Paper box shador */
+  /* Paper box shadow */
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
               0 1px 5px 0 rgba(0,0,0,0.12),
               0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
 .title {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
+  font-weight: 600;
 }
 
 .first-paragraph {
