--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @fontface {
-  font-family: 'Reem Kufi', sans-serif;
-  src: url('https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap')
+  font-family: 'Roboto', sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap')
 }
 
 /* reset for a html element */
@@ -12,7 +12,7 @@ a {
 
 .App {
   font-family: 'Reem Kufi', sans-serif;
-  background-color: #CCCCCC;
+  background-color: #282828;
   display: flex;
   flex-direction: column;
   align-items: center;
