--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -21,15 +21,30 @@
               0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
+.links-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+}
+
 .title {
-  margin-bottom: 16px;
+  margin-bottom: 12px;
   font-weight: 400;
 }
 
 .first-paragraph {
-  margin-bottom: 8px;
+  margin-bottom: 12px;
 }
 
 .second-paragraph {
-  margin-bottom: 8px;
+  margin-bottom: 12px;
+}
+
+.third-paragraph {
+  margin-bottom: 12px;
+}
+
+.icon {
+  padding-left: 4px;
 }
