change font and add median query

--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -1,50 +1,57 @@
 
-.paper-container {
-  width: 100%;
-  box-sizing: border-box;
-  height: 100%;
-  padding: 16px;
-}
+@media (max-width: 480px) {
+  .paper-container {
+    width: 100%;
+    box-sizing: border-box;
+    height: 100%;
+    padding: 16px;
+  }
 
-.paper {
-  padding: 24px;
-  box-sizing: border-box;
-  background-color: #FFFFFF;
-  display: flex;
-  border-radius: 2px;
-  flex-direction: column;
-  height: 100%;
-  font-weight: 300;
-  /* Paper box shadow */
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
-              0 1px 5px 0 rgba(0,0,0,0.12),
-              0 3px 1px -2px rgba(0,0,0,0.2);
-}
+  .paper {
+    padding: 24px;
+    box-sizing: border-box;
+    background-color: #FFFFFF;
+    display: flex;
+    border-radius: 2px;
+    flex-direction: column;
+    height: 100%;
+    font-weight: 400;
+    /* Paper box shadow */
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+                0 1px 5px 0 rgba(0,0,0,0.12),
+                0 3px 1px -2px rgba(0,0,0,0.2);
+  }
 
-.links-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: flex-end;
-}
+  .links-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+  }
 
-.title {
-  margin-bottom: 12px;
-  font-weight: 400;
-}
+  .title {
+    margin-bottom: 12px;
+    font-weight: 600;
+  }
 
-.first-paragraph {
-  margin-bottom: 12px;
-}
+  .first-paragraph {
+    margin-bottom: 12px;
+  }
 
-.second-paragraph {
-  margin-bottom: 12px;
-}
+  .second-paragraph {
+    margin-bottom: 12px;
+  }
 
-.third-paragraph {
-  margin-bottom: 12px;
-}
+  .third-paragraph {
+    margin-bottom: 12px;
+  }
 
-.icon {
-  padding-left: 4px;
+  .fourth-paragraph {
+    margin-bottom: 12px;
+  }
+
+  .icon {
+    padding-left: 4px;
+  }
+
 }
