--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @fontface {
-  font-family: 'Roboto', sans-serif;
-  src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap')
+  font-family: 'Saira Condensed', sans-serif;
+  src: url('https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@300;400;600&display=swap');
 }
 
 /* reset for a html element */
@@ -11,11 +11,17 @@ a {
 }
 
 .App {
-  font-family: 'Reem Kufi', sans-serif;
+  font-family: 'Saira Condensed', sans-serif;
   background-color: #282828;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  min-width: 100vw;
+}
+
+
+@media (max-width: 480px) {
+  .App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    min-width: 100vw;
+  }
 }
