desktop version first version

--- a/src/components/Polaroid/Polaroid.css
+++ b/src/components/Polaroid/Polaroid.css
@@ -1,16 +1,31 @@
+
+
+
 .polaroid {
   background-color: #FFFFFF;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.polaroid-container {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
+
+.picture {
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 480px) {
-  .polaroid {
-    display: flex;
-    flex-direction: column;
-    padding: 8px;
+  .polaroid-container {
     padding-bottom: 0px;
-    justify-items: center;
-    align-items: center;
     max-width: 35%;
+    background-color: #FFFFFF;
   }
 
   .picture-container {
