--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,14 @@ a {
 
 @media (max-width: 480px) {
   .App {
-    display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
-    min-width: 100vw;
     padding-top: 12px;
   }
+}
+
+.App {
+  display: flex;
+  min-height: 100vh;
+  min-width: 100vw;
 }
