--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@ a {
 .App {
   font-family: 'Saira Condensed', sans-serif;
   background-color: #282828;
+  display: flex;
+  min-height: 100vh;
+  min-width: 100vw;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -24,8 +29,3 @@ a {
   }
 }
 
-.App {
-  display: flex;
-  min-height: 100vh;
-  min-width: 100vw;
-}
