--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -1,3 +1,42 @@
+.paper-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.paper {
+  max-width: 50%;
+  padding: 24px;
+  background-color: #FFFFFF;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+                0 1px 5px 0 rgba(0,0,0,0.12),
+                0 3px 1px -2px rgba(0,0,0,0.2);
+}
+
+.title {
+  margin-bottom: 12px;
+  font-weight: 600;
+}
+
+.first-paragraph {
+  margin-bottom: 12px;
+}
+
+.second-paragraph {
+  margin-bottom: 12px;
+}
+
+.third-paragraph {
+  margin-bottom: 12px;
+}
+
+.fourth-paragraph {
+  margin-bottom: 12px;
+}
+
+.icon {
+  padding-left: 4px;
+}
 
 @media (max-width: 480px) {
   .paper-container {
@@ -16,6 +55,7 @@
     flex-direction: column;
     height: 100%;
     font-weight: 400;
+    max-width: 100%;
     /* Paper box shadow */
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
                 0 1px 5px 0 rgba(0,0,0,0.12),
