--- a/src/components/Polaroid/Polaroid.css
+++ b/src/components/Polaroid/Polaroid.css
@@ -11,9 +11,9 @@
 
 .polaroid-container {
   display: flex;
-  flex-direction: column;
-  justify-items: center;
   align-items: center;
+  justify-content: center;
+  max-width: 20%;
 }
 
 .picture {
