--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 75%;
 }
 
 .paper {
@@ -44,6 +45,7 @@
     box-sizing: border-box;
     height: 100%;
     padding: 16px;
+    max-width: 100%;
   }
 
   .paper {
