--- a/src/components/Polaroid/Polaroid.css
+++ b/src/components/Polaroid/Polaroid.css
@@ -7,13 +7,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 200px;
 }
 
 .polaroid-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 20%;
 }
 
 .picture {
@@ -26,6 +26,10 @@
     padding-bottom: 0px;
     max-width: 35%;
     background-color: #FFFFFF;
+  }
+
+  .polaroid {
+    max-width: 100%;
   }
 
   .picture-container {
