add different font

--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;400;600&display=swap');
+
+
 .paper-container {
   display: flex;
   justify-content: center;
@@ -6,6 +9,7 @@
 }
 
 .paper {
+  font-family: 'Josefin Slab', serif;
   max-width: 50%;
   padding: 32px;
   background-color: #FFFFFF;
