--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -11,6 +11,8 @@
 
 .paper {
   font-family: 'Josefin Slab', serif;
+  display: flex;
+  flex-direction: column;
   max-width: 40%;
   min-width: 300px;
   height: 100%;
@@ -41,6 +43,14 @@
 
 .fourth-paragraph {
   margin-bottom: 12px;
+}
+
+.links-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .icon {
@@ -77,7 +87,6 @@
     height: 100%;
     width: 100%;
     display: flex;
-    align-items: flex-end;
   }
 
   .title {
