add Hello animation

--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -24,10 +24,39 @@
                 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
+/* Hello Animation */
+
 .title {
+  font-size: 1.12rem;
   margin-bottom: 12px;
   font-weight: 600;
+  position: relative;
+  width: max-content;
 }
+
+.title::before,
+.title::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.title::before {
+  background: white;
+  animation: typewriter .5s
+    steps(6) 4s forwards;
+}
+
+.title::after {
+  width: 0.125rem;
+  background: black;
+  animation: typewriter .5s steps(6) 4s forwards;
+}
+
+/* End of Hello Animation */
 
 .first-paragraph {
   margin-bottom: 12px;
@@ -114,5 +143,17 @@
     padding-left: 4px;
   }
 
+}
+
+@keyframes typewriter {
+  to {
+    left: 100%;
+  }
+}
+
+@keyframes blink {
+  to {
+    background: transparent;
+  }
 }
 
