--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -19,10 +19,9 @@
   font-size: 18px;
   display: flex;
   flex-direction: column;
-  max-width: 40%;
-  min-width: 300px;
+  width: max(25%, 350px);
   height: 100%;
-  max-height: 60%;
+  max-height: 500px;
   padding: 32px;
   background-color: #FFFFFF;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
