--- a/src/components/PaperSheet/PaperSheet.css
+++ b/src/components/PaperSheet/PaperSheet.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   width: max(25%, 350px);
   height: 100%;
-  max-height: 450px;
+  max-height: 470px;
   padding: 32px;
   background-color: #FFFFFF;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
@@ -63,12 +63,29 @@
 .icon {
   padding-left: 4px;
   padding-right: 4px;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+}
+
+.icons-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
 }
 
 .emoji {
   font-size: 1.15rem;
 }
+
+.contact-me-section {
+  display: flex;
+  align-items: center;
+}
+
+.blog-phrase {
+  display: flex;
+}
+
 
 @media (max-width: 550px) {
   .paper-container {
@@ -102,7 +119,9 @@
     height: 100%;
     width: 100%;
     display: flex;
+    flex-direction: column;
   }
+
 
   .title {
     margin-bottom: 12px;
