--- a/src/components/Polaroid/Polaroid.css
+++ b/src/components/Polaroid/Polaroid.css
@@ -26,7 +26,8 @@
 }
 
 .caption {
-  color: black;
+  font-size: 18px;
+  color: #282828;
   margin-top: 8px;
   margin-bottom: 4px;
 }
@@ -52,6 +53,10 @@
   .picture {
     width: 100%;
     height: 100%;
+  }
+
+  .caption {
+    font-size: 16px;
   }
 }
 
