initial layout - very rough

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,25 +5,15 @@
     <p
       class="text-center text-sm leading-loose text-muted-foreground md:text-left"
     >
-      Built by{' '}
-      <a
-        href="https://github.com/AREA44"
-        target="_blank"
-        rel="noreferrer"
-        class="font-medium underline underline-offset-4"
-      >
-        AREA44
-      </a>
-      . The source code is available on{' '}
+      Built with Astro based on this
       <a
         href="https://github.com/AREA44/astro-shadcn-ui-template"
         target="_blank"
         rel="noreferrer"
         class="font-medium underline underline-offset-4"
       >
-        GitHub
+        theme
       </a>
-      .
     </p>
   </div>
 </footer>
