--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import HeadSEO from '@/components/HeadSEO.astro'
 import Footer from '@/components/Footer.astro'
 import Header from '@/components/Header.astro'
+import Sidebar from '@/components/Sidebar.astro'
 
 interface Props {
   title?: string | undefined
@@ -19,7 +20,8 @@ const { title, description, ogImage } = Astro.props
   <body class="min-h-screen bg-background font-sans antialiased">
     <div class="relative flex min-h-screen flex-col">
       <Header />
-      <main class="flex-auto">
+      <main class="flex grow">
+        <Sidebar />
         <slot />
       </main>
       <Footer />
