--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  width: 100vw;
 }
 
 a {
@@ -29,7 +31,6 @@ a:hover {
 
 body {
   margin: 0;
-  place-items: center;
 }
 
 h1 {
